--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Mark LeMoine <thatsgobbles@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+cursive = { version = "0.12", default-features = false, features = ["termion-backend"] }
