--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2018"
 
 [dependencies]
 cursive = { version = "0.12", default-features = false, features = ["termion-backend"] }
+strum = "0.17.1"
+strum_macros = "0.17.1"
